# firststep

./: CMakeLists.txt
glew-1.13.0/: glew.pc  glewmx.pc
portaudio/: CMakeLists.txt  FIRSTSTEP-PATCHES.txt
portaudio/cmake_support/: options_cmake.h.in
portaudio/src/common/: pa_hostapi.h
src/java/firststep/: Canvas.java  Deletable.java  DoubleXY.java  DrawingQueue.java  FloatXY.java  Font.java  Framebuffer.java  Image.java  IntXY.java  Window.java
src/java/firststep/contracts/: Animatable.java  Deletable.java  Renderable.java
src/java/firststep/internal/: GL3W.java  GLFW.java  NVG.java  NativeLoader.java  OS.java
src/java/firststep/internal/portaudio/: BlockingStream.java  DeviceInfo.java  HostApiInfo.java  PortAudio.java  PortAudioException.java  StreamInfo.java  StreamParameters.java
src/native/: gl-header.h  gl-jni.cpp  glfw-jni.cpp  nanovg-jni.c
src/native/portaudio/: jni_BlockingStream.c  jni_BlockingStream.h  jni_PortAudio.c  jni_PortAudio.h  jpa_tools.c  jpa_tools.h
